[package]
name = "pulsar-node-rust-client"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
pulsar = "4.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.9"
once_cell = "1.9.0"
neon-runtime = "0.9.1"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]