[package]
edition = "2021"
name = "pulsar-node-rust-client"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.3", default-features = false, features = ["napi4", "tokio_rt", "serde-json"] } # move to 2.0.4 "compat-mode"
napi-derive = {version = "2.9.3"}  # move to 2.0.8 features = ["compat-mode"]
futures = "0.3"
pulsar = "5.0.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.9"
once_cell = "1.9.0"
native-tls = { version = "0.2", features = ["vendored"] }


[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
